fix pixel overflow on percent bar

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -84,6 +84,7 @@
         padding: 0
 
         li
+          +box-sizing(border-box)
           +font-size(12)
           border: 1px solid #{"{{ theme.border_color }}"}
           border-width: 1px 1px 0 1px
@@ -99,13 +100,14 @@
             border-width: 1px
 
           span
+            display: inline-block
+            height: 56px
+            left: 0
+            overflow: hidden
             position: relative
             top: 0
-            left: 0
-            height: 56px
-            display: inline-block
-            z-index: 99
             white-space: nowrap
+            z-index: 99
 
             &.sold_out
               text-decoration: line-through
@@ -121,7 +123,7 @@
               +opacity(.5)
               background-color: #{"{{ theme.border_color }}"}
               display: block
-              height: 56px
+              height: 55px
               left: 0
               position: relative
               top: 0
